--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://GITHUB_NICKNAME.github.io/REPOSYTORY_NAME/",
+  "homepage": "https://enertt.github.io/learning_project_fitness/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
